Bug 136921 - Section icon is not correctly visible in Linux dark theme, lines are black
Summary: Section icon is not correctly visible in Linux dark theme, lines are black
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All Linux (All)
: low trivial
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2020-09-21 11:04 UTC by medmedin2014
Modified: 2022-10-15 16:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Section icon is not correctly visible in dark mode (31.14 KB, image/png)
2020-09-21 11:04 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2020-09-21 11:04:33 UTC
Created attachment 165719 [details]
Section icon is not correctly visible in dark mode

Section icon is not correctly visible in dark mode. See atatched image for more info.
Comment 1 Buovjaga 2021-07-19 09:26:51 UTC
Repro

NixOS
Version: 7.1.4.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 2 Timur 2022-09-12 14:35:05 UTC
Section icons in Insert-Section-Column black from LO 5.2 but fixed white from LO 7.1.
This bug refers to Insert Section icon (from Standard or Tabbed UI), where lines are still black in 7.5+, becoming white only on select. 
Trivial.
Comment 3 Rafael Lima 2022-10-10 18:44:47 UTC
Patch available for review in:
https://gerrit.libreoffice.org/c/core/+/141176
Comment 4 Commit Notification 2022-10-15 08:11:00 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf9a83b495576f9c12cd36f65b11d3d1b8f1d142

tdf#136921 Fix color of Insert - Section control in dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2022-10-15 10:44:53 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/39dded7348229de57211ef30c5d2715bf42c9056

tdf#136921 Fix color of Insert - Section control in dark mode

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.