tdf#136921 Fix color of Insert - Section control in dark mode

Change-Id: I907d39048cfd963d91643bdff7de3d10310217d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141176
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>